--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
 .body {
     display: flex;
@@ -7,4 +14,22 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    background: #1F2937;
+    color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.logo {
+    padding-left: 200px;
+    font-size: xx-large;
+    font-weight: 500;
+}
+
+.links {
+    display: flex;
+    gap: 20px;
+    padding-right: 50px;
+    color: gray;
 }
