--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,47 @@ body {
     padding-right: 50px;
     color: gray;
 }
+
+.intro {
+    display: flex;
+    padding-left: 200px;
+    padding-top: 50px;
+    background-color: #1F2937;
+    color: white;
+    gap: 100px;
+    padding-bottom: 50px;
+}
+
+.intro-text {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.intro-title {
+    font-size: 60px;
+    width: 400px;
+    height: auto;
+    font-weight: bold;
+}
+
+.intro-desc {
+    font-size: 20px;
+    width: 600px;
+    height: auto;
+    color: gray;
+}
+
+.sign-up {
+    width: 100px;
+    background-color: #3882F6;
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    border-color: #1F2937;
+}
+
+.placeholder {
+    height: 200px;
+    width: auto;
+}
