--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,35 @@ body {
     color: gray;
     margin-top: 5px;
 }
+
+.quote {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 120px;
+    margin-top: 50px;
+    background-color: #e5e7eb;
+    padding-bottom: 120px;
+}
+
+.quote-container {
+    display: flex;
+    width: 700px;
+
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic
+}
+
+.author {
+    text-align: end;
+    margin-top: 5px;
+    font-weight: bolder;
+}
