feat: footer added

--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,12 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    background-color: #1F2937;
+    color: white;
+}
